# gh-action-adapt-sigstore-pypi

./: Dockerfile  README.md  action.yml  convert-attestations.py
.github/: dependabot.yml
.github/workflows/: gha-tests.yml  lint.yml  tests.yml
convert-attestations/: Makefile  pyproject.toml
convert-attestations/src/convert_attestations/: __init__.py  __main__.py  _cli.py
convert-attestations/test/: test_cli.py  test_init.py
convert-attestations/test/assets/: gh-output-single-attestation.jsonl  gh-output-two-attestations.jsonl  missing-subject.jsonl  multiple-signatures.jsonl  multiple-subjects.jsonl  no-name-subject.jsonl  pypi_attestations-0.0.18-py3-none-any.whl.slsa.attestation  pypi_attestations-0.0.18.tar.gz.slsa.attestation
